Introduce a product grid and a tile partial to render products
Also add the grid to the index where data/products.json will be used to
render the products. The product grid partial will take a title and
products. A product tile will take a single product and will render a
link with an image, a title, a summary and 'read more'.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,15 +8,18 @@ og_images:
   - "/images/example1.jpg"
   - "/images/example2.jpg"
   - "/images/example3.jpg"
+products: products
 ---
-<%= partial("bricks/hero/hero", locals: { image: "/images/example1.jpg",
-                                          image_alt: "Example1",
+<%= partial("bricks/hero/hero", locals: { image: "/images/bricks.gif",
+                                          image_alt: "Bricks",
                                           variant: "full",
                                           color_overlay: "gradient",
                                           title: current_page.data.title,
                                           text: current_page.data.description,
                                           button_link: "/images/bricks.gif",
                                           button_text: "Contact us" }) %>
+
+<%= partial("bricks/product/grid/grid", locals: { title: "Our products" }) %>
 
 <%= link_to(
   "Read Documentation",
