--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -6,3 +6,5 @@
 @import "../bricks/header/header";
 @import "../bricks/hero/hero";
 @import "../bricks/logo/logo";
+@import "../bricks/product/grid/grid";
+@import "../bricks/product/grid/tile/tile";
