Adjust data.products JSON file
To be less repetitive, do not use the `products` property but just have
a list in the file.

--- a/source/bricks/product/grid/_grid.erb
+++ b/source/bricks/product/grid/_grid.erb
@@ -1,7 +1,7 @@
 <section class="product-list container">
   <h2><%= title %></h2>
   <div class="grid">
-    <% data.products.products.each do |product| %>
+    <% data.products.each do |product| %>
       <%= partial("bricks/product/grid/tile/tile", locals: { product: product }) %>
     <% end %>
   </div>
