Add CSS for responsiveness
Show product tiles underneath each other when on phone / tablet viewport
sizes.

--- a/source/bricks/hero/_hero.scss
+++ b/source/bricks/hero/_hero.scss
@@ -88,7 +88,7 @@
   }
 
   .container {
-    max-width: 24rem;
+    max-width: $max-width;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
