--- a/source/bricks/product/grid/_grid.scss
+++ b/source/bricks/product/grid/_grid.scss
@@ -5,7 +5,15 @@
 
   .grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: $grid-gap;
+    grid-gap: $grid-gap-for-tablet-portrait-down;
+    grid-template-columns: 1fr;
+    margin: 0 auto;
+    max-width: $max-width;
+
+    @include for-tablet-landscape-up {
+      grid-gap: $grid-gap;
+      grid-template-columns: 1fr 1fr 1fr;
+      max-width: initial;
+    }
   }
 }
