Adjust product grid and tile to match the product list and item better

--- a/source/bricks/product/grid/_grid.erb
+++ b/source/bricks/product/grid/_grid.erb
@@ -1,4 +1,4 @@
-<section class="product-list container">
+<section class="products container">
   <h2><%= title %></h2>
   <div class="grid">
     <% data.products.each do |product| %>
