--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -8,3 +8,6 @@
 @import "../bricks/logo/logo";
 @import "../bricks/product/grid/grid";
 @import "../bricks/product/grid/tile/tile";
+@import "../bricks/product/list/list";
+@import "../bricks/product/list/item/item";
+@import "../bricks/product/product";
