--- a/source/bricks/product/grid/tile/_tile.scss
+++ b/source/bricks/product/grid/tile/_tile.scss
@@ -1,8 +1,4 @@
-.tile {
-  border-radius: $border-radius;
-  box-shadow: $shadow;
-  overflow: hidden;
-  position: relative;
+.products .grid .tile {
   text-decoration: none;
   transition: transform .18s ease;
 
@@ -13,11 +9,15 @@
 
   article {
     height: 100%;
+    border-radius: $border-radius;
+    box-shadow: $shadow;
+    overflow: hidden;
   }
 
   .text {
     color: $color-font;
     padding: 1.5rem 1.75rem 3.5rem;
+    position: relative;
   }
 
   span {
