Add the list to the index
where data/products.json will be used to render the products.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,7 +19,8 @@ products: products
                                           button_link: "/images/bricks.gif",
                                           button_text: "Contact us" }) %>
 
-<%= partial("bricks/product/grid/grid", locals: { title: "Our products" }) %>
+<%= partial("bricks/product/grid/grid", locals: { title: "Our products (grid)" }) %>
+<%= partial("bricks/product/list/list", locals: { title: "Our products (list)" }) %>
 
 <%= link_to(
   "Read Documentation",
