Change 'Read more' to 'Learn more'
And change the placement of this span in the product grid tile.

--- a/source/bricks/product/list/item/_item.erb
+++ b/source/bricks/product/list/item/_item.erb
@@ -6,7 +6,7 @@
     <div class="text">
       <h3><%= product.name %></h3>
       <p><%= product.summary %></p>
-      <span>Read more →</span>
+      <span>Learn more →</span>
     </div>
   </article>
 <% end %>
