--- a/source/bricks/product/grid/tile/_tile.erb
+++ b/source/bricks/product/grid/tile/_tile.erb
@@ -3,7 +3,7 @@
     <%= image_tag product.image.src, alt: product.image.alt || product.name %>
     <div class="text">
       <h3><%= product.name %></h3>
-      <p><%= product.summary %></p>
+      <p><%= product.description %></p>
     </div>
     <span>Learn more →</span>
   </article>
