--- a/source/bricks/product/list/item/_item.erb
+++ b/source/bricks/product/list/item/_item.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="text">
       <h3><%= product.name %></h3>
-      <p><%= product.summary %></p>
+      <p><%= product.description %></p>
       <span>Learn more →</span>
     </div>
   </article>
