--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -16,17 +16,17 @@ $color-white: #fff;
 $color-white-hover: darken($color-white, 10%);
 $color-white-transparent: transparentize($color-white, 0.2);
 
-$color-primary: #5888e5;
+$color-primary: #7042c1;
 $color-primary-hover: darken($color-primary, 5%);
 $color-primary-transparent: transparentize($color-primary, 0.2);
 $color-secondary: #e480b0;
 $color-secondary-hover: darken($color-secondary, 5%);
 $color-secondary-transparent: transparentize($color-secondary, 0.2);
-$color-tertiary: #f9db01;
+$color-tertiary: #e5be00;
 $color-tertiary-hover: darken($color-tertiary, 5%);
 $color-tertiary-transparent: transparentize($color-tertiary, 0.2);
 
-$color-font: #272727;
+$color-font: #302e4b;
 $color-link: $color-secondary;
 $color-link-hover: darken($color-link, 10%);
 $color-selection: transparentize($color-tertiary, 0.2);
