Add a featured brick and use it on the index page
Featured data has a title, description and image. This is usefull to
point out USP's of a product/service.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,7 +20,8 @@ products: products
                                           button_text: "Contact us" }) %>
 
 <%= partial("bricks/product/grid/grid", locals: { title: "Our products (grid)" }) %>
-<%= partial("bricks/product/list/list", locals: { title: "Our products (list)" }) %>
+<% partial("bricks/product/list/list", locals: { title: "Our products (list)" }) %>
+<%= partial("bricks/featured/grid/grid", locals: { title: "What we are known for" }) %>
 
 <%= link_to(
   "Read Documentation",
