--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -3,6 +3,9 @@
 @import "_typography";
 
 @import "../bricks/button/button";
+@import "../bricks/featured/featured";
+@import "../bricks/featured/grid/grid";
+@import "../bricks/featured/grid/tile/tile";
 @import "../bricks/header/header";
 @import "../bricks/hero/hero";
 @import "../bricks/logo/logo";
