Adjust featured and products data
Change the content of featured and products data to make sure it's about
features and aspects of Legobox.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,9 +19,9 @@ products: products
                                           button_link: "/images/bricks.gif",
                                           button_text: "Contact us" }) %>
 
-<%= partial("bricks/product/grid/grid", locals: { title: "Our products (grid)" }) %>
-<% partial("bricks/product/list/list", locals: { title: "Our products (list)" }) %>
-<%= partial("bricks/featured/grid/grid", locals: { title: "What we are known for" }) %>
+<%= partial("bricks/product/grid/grid", locals: { title: "Our products" }) %>
+<% partial("bricks/product/list/list", locals: { title: "Our products" }) %>
+<%= partial("bricks/featured/grid/grid", locals: { title: "The benefits of going static" }) %>
 
 <%= link_to(
   "Read Documentation",
