Add inline SVG icons below body of layout
This will load pages faster than requesting icons every time an icon
needs to be displayed, plus it should be easier to update icons now via
IcoMoon.

Also remove the image helpers file and the phone icon because it's no
longer needed.

--- a/source/bricks/button/_button.erb
+++ b/source/bricks/button/_button.erb
@@ -1,9 +1,9 @@
 <% link_to to, class: "button " + variant ||= "default" do %>
   <% if locals[:icon_left] %>
-    <%= inline_svg icon_left, class: "inline-svg left" %>
+    <svg class="icon left icon-<%= icon_left %>"><use xlink:href="#icon-<%= icon_left %>"></use></svg>
   <% end %>
   <%= text %>
   <% if locals[:icon_right] %>
-    <%= inline_svg icon_right, class: "inline-svg right" %>
+    <svg class="icon right icon-<%= icon_right %>"><use xlink:href="#icon-<%= icon_right %>"></use></svg>
   <% end %>
 <% end %>
