--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -22,5 +22,6 @@
       <%= yield %>
     </main>
   </body>
+  <%= partial "images/icons/symbol-defs.svg" %>
   <%= javascript_include_tag "site" %>
 </html>
