--- a/source/stylesheets/_baseplate.scss
+++ b/source/stylesheets/_baseplate.scss
@@ -27,3 +27,12 @@ section {
     max-width: $max-width-desktop-up;
   }
 }
+
+.icon {
+  display: inline-block;
+  fill: currentColor;
+  height: 1em;
+  stroke: currentColor;
+  stroke-width: 0;
+  width: 1em;
+}
